public/css/style.css
/*----BASIC STUFF----*/

body{
	font-family: 'Roboto', 'sans-serif';
}

#notifyUser{
	position: absolute;
	bottom: 2em;
	right: 2em;
	z-index: 100;
	background-color: #fff;
}

a:hover {
	text-decoration: none;
	color: gray;
	
}

main{
	margin-bottom: 10px;
}

.page-content{
	margin-top: 2em;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	box-sizing: border-box;
	padding: 0 10% 0 10%;
	/*align-items: center;
	align-content: center;*/
	justify-content: center;
}

.flex100{
	flex-basis: 100%;
}
.flex50{
	flex-basis:  50%;
}

.flex45{
	flex-basis: 45%;
}

.width100{
	width: 100%;
}

.width45{
	width: 45%;
}

.tableRow{
	display: flex;
	justify-content: space-around;
}

.tableHead{
	border-bottom: 1px solid gray;
	margin-bottom: 0.5rem;
	font-weight: 600;
}

.form-control {
	
}

.flex-container {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-around;
	/*align-content: space-around;*/
	box-sizing: border-box;
	margin:  0;
	width: 100%;
}
.flex-item {

}

.mdl-button {
   min-width: inherit;
   
}

.marginL{
	margin-left:  1em;
}

.marginB{
	margin-bottom: 1em;
}
.th{
    cursor: pointer;
}
.a_no_underline{
	text-decoration: none;
}

.sidenavActive{
	background-color: rgba(0,0,0,0.1);
}
/*.signInNav{
	border-left: 1px solid #fff;
}*/

/*----------------*/

/*----BUTTONS----*/

.roundButton{
	position: fixed;
	bottom: 3rem;
	right: 3rem;
	z-index: 200;
}

.formStyle{
	display: flex;
	flex-flow: column wrap;
	width: 100%;
	flex-basis: 100%;
}

.profilePicture{
	/*background-color: blue;*/
	float: right;
	position: absolute;
	right:  1em;
	top: 4em;
	border-radius: 1em;
}

.profileDiv{
	position: relative;
	width:  25%;
}
.slim-container{
	width:  25%;
}
.square100{
	height: 100px;
	width: 100px;
}

.relative{
	position: relative;
}

.knappis{
	position: absolute;
	bottom: -1.7em;
	right:  -4.3em;
}

.knappis:hover{
	color: white;
}

.equipmentAdd{
	bottom: 0.4em;
}

.categoriesAdd {
	position: absolute;
	bottom: 1em;
	right: 10em;
}

.alertBox{
	width: 100%;
	border-radius: 0.2em;
	box-sizing: border-box;
	padding: 0;
	margin:  1em 0 1em 0;
	
}

.alertRed{
	color: #000;
	font-weight: 700;
	border: 1px solid #F44336;
	background-color: rgba(211, 47, 47, 0.2) ;
}

.alertGreen{
	color: #000;
	font-weight: 700;
	border: 1px solid #8BC34A;
	background-color: rgba(156, 204, 101, 0.2) ;
}

.alertYellow{
	color: #000;
	font-weight: 700;
	border: 1px solid #FFB300;
	background-color: rgba(255, 193, 7, 0.2) ;
}

.marginTop1{
	margin-top: 1em;
}

.marginBottom1{
	margin-bottom: 1em;
}

.formPadding{
	padding: 1em;
	box-sizing: border-box;
}

.bookingsForm{
	display: flex;
	flex-flow: row wrap;
	width: 100%;
	flex-basis: 100%;
}

.formGroupParent{
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;

	width: 100%;
	flex-basis: 100%;

}
.formGroup{

	width: 45%;
	flex-basis: 45%;
	align-self: flex-start;
}
.formGroup input{
  width: 100%;
}

#noBulletPoints li {
	list-style-type: none;
}

.demo-card-square.mdl-card.postIt {
  width: auto;
  height: auto;
}
.demo-card-square.postIt > .mdl-card__title.postIt {
  color: #757575;
  background-color: RGB(241, 210, 130);
}

.mdl-card__supporting-text.postIt {
	background-color: RGBA(241, 210, 130, 0.75);
	width: 100%;
}

.mdl-card__actions.postIt {
	
	background-color: rgba(241, 210, 130, 0.75);
}

.bulletColor {
	color: #757575;
	
}

.mdl-grid {	
  width: 100%;
}

.materialLabel{
	color: rgba(0,0,0,.26);
	font-size:  16px;
	text-align: left;
	overflow: hidden;
	width: 100%;
	margin-bottom: 0.2em;
}

.activeTab{
	background-color: rgba(0,0,0,0.1);
	/*color: rgb(255,152,0) !important;*/
}
.activeTab.adminTab{
	color: #fff !important;
}

.adminNavColor{
	background-color: rgb(255,152,0) !important;
}

.roomPrivacyBox{
	display: flex;
	width: 70%;
	justify-content: space-between;
}

.myBookingsBox{
	margin-top: 1em;
	display: flex;
	justify-content: center;
	flex-flow: column;
}
.myBookingsBox h1{

}

.categoriesTabBox{
	display: flex;
	width: 100%;
	flex-flow: row wrap;
	justify-content: center;
}

.categoriesTable{
	width: 50%;
	flex-basis: 50%;
}

.pagination{
	width: 100%;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    list-style-type: none;
    padding: 0;
}

.contentWrapper{
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.sortingOpen{
	align-self: flex-end;
	border-bottom: 0px !important;
}

.sortingClose{
	float: right;
}

.sortingClose, .sortingOpen{
	cursor: pointer;
}

.headers{
    justify-content: center;
    display: flex;
}
/*select{
	border: 0;
	background-color: transparent;
	border-bottom: 1px solid blue;
}*/
/*----------------*/



.mdl-layout__content {
  flex: 1 0 auto;
}

.mdl-mini-footer {
  flex: 0 0 auto;
}
/*.calendarHead{
	display: flex;
	justify-content: space-between;
	background-color: blue;
	color: white;
	padding: 0.2em;
	box-sizing: border-box;
	margin: 0;
}

.calendarColums{
	display: flex;
	justify-content: space-between;
	margin: 0;
	height: 200px;
	position: relative;
}

.calendarCell{
	display: inline-flex;
	width: 100%;
	
}

.calendarCell .calendarBooked{
	border-right: 1px black solid;

}

.calendarBooked{
	position: absolute;
	background: red;
	padding: 0.2em;
	box-sizing: border-box;
	top: 20%;
	height: 40px
}
*/

.signOutNav{
	margin-left: 2em;
}
@media only screen and (max-width: 600px) {
	.roomPrivacyBox{
		width: 100%;
		height: 10px;
	}

	.page-content{
		margin-top: 1em;
		padding: 0 5% 0 5%;
	}

	.myBookingsBox h1{
		font-size: 2em;
	}

	.categoriesTable{
			width: 100%;
    		flex-basis: 100%;
	}
}

#numberFound{
	text-align: center;

}

#numberFound .bookSuccess{
	color:  green;
}

#numberFound .bookError{
	color:  darkred;
}

/* tried to make tables more responsive
@media only screen and (max-width: 992px){
	table{
		width: 100%;
	    border-collapse: collapse;
	    border-spacing: 0;
	    display: block;
	    position: relative;
	}

	table, th, td {
    	border: none;
	}

	thead {
	    border: 0;
	    border-right: 1px solid rgba(0,0,0,0.12);
	    display: block;
    float: left;
    vertical-align: middle;
	}

	tr{
		border-bottom: none;
    padding: 0 10px;
        vertical-align: inherit;
    border-color: inherit;
	}

	th{
		display: block;
    text-align: right;
    margin: 0;
    vertical-align: top;

	}

	tbody{
		display: block;
    width: auto;
    position: relative;
    overflow-x: auto;
    white-space: nowrap;
        vertical-align: middle;
    border-color: inherit;
	}

	tbody tr{
		display: inline-block;
    vertical-align: top;
        border-bottom: none;
    padding: 0 10px;
	}

	td{
		display: block;
    min-height: 1.25em;
    text-align: left;
	}
}*/

